--- a/static/css/canje.css
+++ b/static/css/canje.css
@@ -132,3 +132,8 @@ nav a:hover {
     max-width: 100%;
     max-height: 100%;
 }
+
+.modal {
+    display: none; /* Hidden by default */
+    /* ... otros estilos ... */
+}
