--- a/static/css/detalle_ver.css
+++ b/static/css/detalle_ver.css
@@ -83,7 +83,8 @@ body {
 .tooltip-container {
     position: absolute;
     z-index: 1000;
-    background-color: rgba(0, 0, 0, 0.8);
+    /*background-color: rgba(0, 0, 0, 0.8);*/
+    background-color: rgba(84, 206, 135, 0.8);
     color: white;
     padding: 10px;
     border-radius: 5px;
