--- a/templates/canje.html
+++ b/templates/canje.html
@@ -329,8 +329,8 @@
                 linti_f_vto: datosDocumentos['licencia_linti']?.linti_f_vto || null,
                 linti_categoria: datosDocumentos['licencia_linti']?.linti_categoria || null,
                 linti_imagen: datosDocumentos['licencia_linti']?.linti_ocr_text || null, // ¡Asegúrate de que esta clave sea correcta!
-                frente_dni_imagen: datosDocumentos['frente_dni_imagen']?.ocr_text || null, // ¡Asegúrate de que esta clave sea correcta!
-                dorso_dni_imagen: datosDocumentos['dorso_dni_imagen']?.ocr_text || null,   // ¡Asegúrate de que esta clave sea correcta!
+                frente_dni_imagen: datosDocumentos['frente_dni']?.ocr_text || null, // ¡Asegúrate de que esta clave sea correcta!
+                dorso_dni_imagen: datosDocumentos['dorso_dni']?.ocr_text || null,   // ¡Asegúrate de que esta clave sea correcta!
                 licencia_frente_imagen: datosDocumentos['licencia_frente']?.ocr_text || null, // ¡Asegúrate de que esta clave sea correcta!
                 licencia_dorso_imagen: datosDocumentos['licencia_dorso']?.ocr_text || null,   // ¡Asegúrate de que esta clave sea correcta!
                 //linti_imagen: datosDocumentos['licencia_linti']?.ocr_text || null,       // ¡Asegúrate de que esta clave sea correcta!
