--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -100,6 +100,7 @@ button {
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s;
+    align-items: left;
 }
 
 button:hover {
